--- a/typedb-src/modules/ROOT/partials/typedb-nav.adoc
+++ b/typedb-src/modules/ROOT/partials/typedb-nav.adoc
@@ -22,12 +22,13 @@
 //** xref:typedb::development/api.adoc[]
 
 * Managing TypeDB
-** xref:typedb::admin/configuration.adoc[]
-** xref:typedb::admin/export-import.adoc[]
-** xref:typedb::admin/update.adoc[]
-** xref:typedb::admin/ha.adoc[]
-** xref:typedb::admin/security.adoc[]
-** xref:typedb::admin/enterprise-deployment.adoc[]
+** xref:typedb::managing/configuration.adoc[]
+** xref:typedb::managing/export-import.adoc[]
+** xref:typedb::managing/upgrading.adoc[]
+** xref:typedb::managing/enterprise-deployment.adoc[]
+** xref:typedb::managing/user-management.adoc[]
+** xref:typedb::managing/ha.adoc[]
+** xref:typedb::managing/security.adoc[]
 
 * Tutorials
 ** xref:typedb::tutorials/iam-schema.adoc[]
