--- a/drivers-src/modules/ROOT/pages/rust/overview.adoc
+++ b/drivers-src/modules/ROOT/pages/rust/overview.adoc
@@ -1,6 +1,5 @@
 = Rust Driver
-:page-aliases: clients::rust-driver.adoc
-:page-aliases: clients::rust-driver/overview.adoc
+:page-aliases: clients::rust-driver.adoc, clients::rust-driver/overview.adoc
 :Summary: Overview for TypeDB Rust Driver.
 :keywords: typedb, client, driver, rust
 :pageTitle: TypeDB Rust Driver
@@ -20,10 +19,27 @@ Please see the
 
 To install TypeDB Rust Driver:
 
+[tabs]
+====
+async::
++
+--
 [,bash]
 ----
 cargo add typedb-driver
 ----
+--
+
+sync::
++
+--
+[,bash]
+----
+cargo add typedb-driver -F sync
+----
+--
+====
+
 //cargo add typedb-driver@2.24.5
 
 == Rust Driver API
