Switch to the TypeQL Fundamental content

--- a/typedb-src/modules/ROOT/pages/connecting/console.adoc
+++ b/typedb-src/modules/ROOT/pages/connecting/console.adoc
@@ -22,6 +22,7 @@ It has a unique set of functions and abilities to interact with all editions of 
 TypeDB Console is distributed with TypeDB.
 For a separate installation, see the xref:home:ROOT:install.adoc#_console[Install] page.
 
+[#_connect_to_typedb]
 == Connect to TypeDB
 
 If TypeDB Console is xref:home:ROOT:install.adoc#_console[installed] in the system,
@@ -184,6 +185,10 @@ Default value: `localhost:1729`. +
 | `--version`
 | `-V`
 | Print version information and exit.
+
+| `--diagnostics-disable=true`
+|
+| Disable anonymous error reporting.
 |===
 
 === Scripting
@@ -511,9 +516,9 @@ Database 'test' deleted
 |===
 | TypeDB Console | Protocol encoding version | TypeDB Core | TypeDB Cloud
 
-| 2.26.0
+| 2.26.5
 | 3
-| 2.26.0
+| 2.26.3
 | 2.26.0
 
 | 2.25.7
