--- a/typedb-src/modules/ROOT/pages/tutorials/sample-app.adoc
+++ b/typedb-src/modules/ROOT/pages/tutorials/sample-app.adoc
@@ -89,8 +89,8 @@ include::partial$sample-app-node.adoc[]
 For running the sample application, use the following
 https://github.com/vaticle/typedb-docs/blob/master/typedb-src/modules/ROOT/attachments/iam-schema.tql[define query,window=_blank]
 for a schema definition and an
-https://github.com/vaticle/typedb-docs/blob/master/typedb-src/modules/ROOT/attachments/iam-data.tql[insert query,window=_blank]
-for a sample dataset insertion.
+https://github.com/vaticle/typedb-docs/blob/master/typedb-src/modules/ROOT/attachments/iam-data-single-query.tql[insert query,window=_blank]
+for a sample dataset insertion (as a single insert query, for simplicity).
 
 === Auxiliary files
 
@@ -99,7 +99,7 @@ for a sample dataset insertion.
 Rust::
 +
 --
-You can specify dependencies in a `Cargo.tonl` file. See an example below.
+You can specify dependencies in a `Cargo.toml` file. See an example below.
 
 .Cargo.toml
 [,toml]
@@ -115,6 +115,10 @@ edition = "2021"
 chrono = "0.4.23"
 typedb-driver = { version = "2.26.1", features = ["sync"] }
 ----
+
+[NOTE]
+For this sample app we are using synchronous Rust implementation,
+that requires `sync` feature of typedb-driver to be enabled (see above).
 --
 
 Python::
@@ -249,7 +253,7 @@ We delete such a database if it exists to prevent any possible schema or data co
 Then we create a new database with the name `iam`.
 
 We open a schema session to this database, open a write transaction, read the `iam-schema.tql` file,
-and send its contents as a xref:typeql::schema/define-types.adoc[Define query].
+and send its contents as a xref:typeql::schema/type-definitions.adoc[Define query].
 Next, we commit the transaction to persist the resulted schema.
 
 After that we open a data session, a write transaction, read the `iam-data-single-query.tql` file,
